# creat

./: .editorconfig  .gitignore  .no-pylintrc  .pre-commit-config.yaml  Makefile  README.md  creat.json  dodo.py  pyproject.toml
.github/workflows/: makefile.yml  pr-main.yml  python-package.yml
.run/: creat list.run.xml
creat/: __init__.py  __main__.py  build.py  builds.py  cmd_list.py  cmd_new.py  cmd_sample.py  config.py  configs.py  contexts.py  discovers.py  ex.py  exc.py  index.py  indexes.py  items.py  location.py  presentations.py  processes.py  run.py  sample.py  scaffolds.py  schema.py  source.py  validate.py
creat/action/: bases.py  copy.py  move.py  remove.py  shell.py  use.py
creat/cmd/: config.py  ls.py  new.py  project.py  sample.py
creat/models/: files.py  items.py  runnables.py  sources.py
creat/models/actions/: __init__.py  copy.py  exe.py  move.py  remove.py  shell.py  use.py
creat/models/actions/config/: __init__.py
json-schema/: creat.json
tests/: conftest.py  test__main__.py  test_builds.py  test_cd.py  test_cli.py  test_doc.py  test_find.py  test_idsubs.py  test_index.py  test_indexes.py  test_show.py  test_source.py  test_yaml.py
tests/action/: test_config_file.py  test_copy.py  test_move.py  test_remove.py  test_use.py
tests/action/samples/: copy.creat.yaml
tests/errors/: test_location.py
tests/samples/: sample01.yaml  sample02.yaml  sample03.creat.yaml
tests/samples/root01/: sample01.creat.yaml  sample03.creat.yaml
tests/samples/root01/sub/: sample01.creat.yaml
tests/samples/root02/: sample03.creat.yaml
tests/samples/root02/sub/: sample01.creat.yaml
