[tool.poetry]
name = "creat"
version = "0.0.0"
description = "exoperimental .."
authors = ["Your Name <you@example.com>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
copier = "^9"
jinja2 = "^3"
loguru = "^0.7"
rich = "^13"
typer = "^0.9"
pydantic = "^2"
watchfiles = "^0.21"
json-source-map = "^1.0.5"


[tool.poetry.group.dev.dependencies]
doit = "^0.36"
pre-commit = "^3"
mypy = "^1"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
creat = 'creat.__main__:app'

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
