[tool.poetry]
name = "creat"
version = "0.0.0"
description = "experimental .."
authors = ["Your Name <you@example.com>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
copier = "^9"
jinja2 = "^3"
loguru = "<1"
rich = "^13"
typer = "^0.15"
pydantic = "^2"
watchfiles = "^1"
json-source-map = "^1.0.5"


[tool.poetry.group.dev.dependencies]
doit = "^0.36"
mypy = "<2"
ruff = "<1"
black = { extras = ["d"], version = "<26" }
pip-audit = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-timeout = "*"
typing-extensions = "*"
pre-commit = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
creat = 'creat.__main__:app'

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
