[project]
name = "creat"
version = "0.0.0"
description = "experimental .."
readme = "README.md"
license = "LGPL"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11,<4"
dependencies = [
    "copier (>=9,<10)",
    "jinja2 (>=3,<4)",
    "loguru (>=0.7,<1)",
    "rich  (>=13,<14)",
    "typer (>=0.15,<1)",
    "pydantic (>=2,<3)",
    "watchfiles (>=1,<2)",
    "json-source-map (>=1.0.5,<2)",
    "charset-normalizer (>=3.4.1,<4)",
]

[project.scripts]
creat = 'creat.__main__:cli'


[tool.poetry.group.dev.dependencies]
mypy = "<2"
ruff = ">=0.11,<1"
black = { extras = ["d"], version = "<26" }
pip-audit = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-timeout = "*"
typing-extensions = "*"
pre-commit = "^4"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = [
    "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
